WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
146343
[Curl] Compile errors; ResourceResponseBase::resourceLoadTiming() has changed return type.
https://bugs.webkit.org/show_bug.cgi?id=146343
Summary
[Curl] Compile errors; ResourceResponseBase::resourceLoadTiming() has changed...
peavo
Reported
2015-06-26 04:40:08 PDT
The resourceLoadTiming() member of the class ResourceResponseBase does not return a pointer, but a reference.
Attachments
Patch
(4.21 KB, patch)
2015-06-26 05:23 PDT
,
peavo
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2015-06-26 05:23:44 PDT
Created
attachment 255633
[details]
Patch
Brent Fulgham
Comment 2
2015-06-26 09:20:18 PDT
Comment on
attachment 255633
[details]
Patch r=me. Thank you for fixing this!
WebKit Commit Bot
Comment 3
2015-06-26 10:10:49 PDT
Comment on
attachment 255633
[details]
Patch Clearing flags on attachment: 255633 Committed
r186000
: <
http://trac.webkit.org/changeset/186000
>
WebKit Commit Bot
Comment 4
2015-06-26 10:10:55 PDT
All reviewed patches have been landed. Closing bug.
peavo
Comment 5
2015-06-26 11:53:27 PDT
(In reply to
comment #2
)
> Comment on
attachment 255633
[details]
> Patch > > r=me. Thank you for fixing this!
Thanks for reviewing :)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug