[Curl] Compile errors; ResourceResponseBase::resourceLoadTiming() has changed return type. https://bugs.webkit.org/show_bug.cgi?id=146343

Reviewed by Brent Fulgham.

* platform/network/curl/ResourceHandleManager.cpp:
(WebCore::calculateWebTimingInformations):
(WebCore::headerCallback):
(WebCore::ResourceHandleManager::initializeHandle):
(WebCore::ResourceHandleManager::initCookieSession):
(WebCore::sockoptfunction): Deleted.


Canonical link: https://commits.webkit.org/164433@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@186000 268f45cc-cd09-0410-ab3c-d52691b4dbfc